[package]
name = "cdk-gateway"
version = "0.1.0"
edition = "2024"


[lib]
name = "cdk_gateway"
path = "src/lib.rs"

[[bin]]
name = "cdk_gateway"
path = "src/bin/cdk_gateway.rs"


[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
cdk = { git = "https://github.com/thesimplekid/cdk", branch = "update_bolt12", features = ["mint", "auth", "wallet"] }
cdk-redb = { git = "https://github.com/thesimplekid/cdk", branch = "update_bolt12", features = ["auth", "wallet"] }
cdk-payment-processor = { git = "https://github.com/thesimplekid/cdk", branch = "update_bolt12" }
lightning = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
home = "0.5.11"
config = { version = "0.15.11", features = ["toml"] }
bip39 = "2.1.0"
tokio-util = "0.7.15"
